--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 
     <!-- Transparent Format Selector -->
     <select id="format-select" class="transparent-select">
-      <optgroup label="Audio (MP3)">
+      <optgroup label="🎵 MP3 Audio">
         <option value="mp3-128">MP3 - 128 kbps</option>
         <option value="mp3-192">MP3 - 192 kbps</option>
         <option value="mp3-320">MP3 - 320 kbps</option>
       </optgroup>
-      <optgroup label="Video (MP4)">
+      <optgroup label="🎬 MP4 Video">
         <option value="mp4-360">MP4 - 360p</option>
         <option value="mp4-720">MP4 - 720p</option>
         <option value="mp4-1080">MP4 - 1080p</option>
