--- a/new.html
+++ b/new.html
@@ -176,7 +176,7 @@
   <!-- Central Top Navigation -->
   <nav class="top-nav">
     <ul>
-      <li><a href="index.html" class="nav-link"><i class="fas fa-home"></i> Home</a></li>
+      <li><a href="new.html" class="nav-link"><i class="fas fa-home"></i> Home</a></li>
       <li><a href="error404.html" class="nav-link"><i class="fas fa-history"></i> History</a></li>
       <li><a href="#terms" class="nav-link">Terms and Conditions</a></li>
       <li><a href="#about" class="nav-link">About Us</a></li>
